apps/parca/manifests/parca/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: observability
    app.kubernetes.io/instance: parca
    app.kubernetes.io/name: parca
    app.kubernetes.io/version: 0.12.1
  name: parca
  namespace: parca
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: observability
      app.kubernetes.io/instance: parca
      app.kubernetes.io/name: parca
  template:
    metadata:
      annotations:
        checksum.config/md5: 610e44ed11041b003d6dd9fb8de6408f
        parca.dev/scrape: "true"
      labels:
        app.kubernetes.io/component: observability
        app.kubernetes.io/instance: parca
        app.kubernetes.io/name: parca
        app.kubernetes.io/version: 0.12.1
    spec:
      containers:
      - args:
        - /parca
        - --config-path=/var/parca/parca.yaml
        - --log-level=debug
        - --debug-infod-upstream-servers=https://debuginfod.systemtap.org
        - --debug-infod-http-request-timeout=5m
        image: ghcr.io/parca-dev/parca:v0.12.1
        livenessProbe:
          exec:
            command:
            - /grpc_health_probe
            - -v
            - -addr=:7070
          initialDelaySeconds: 5
        name: parca
        ports:
        - containerPort: 7070
          name: http
        readinessProbe:
          exec:
            command:
            - /grpc_health_probe
            - -v
            - -addr=:7070
          initialDelaySeconds: 10
        resources:
          limits:
            cpu: 2000m
            memory: 10Gi
          requests:
            cpu: 1000m
            memory: 2Gi
        terminationMessagePolicy: FallbackToLogsOnError
        volumeMounts:
        - mountPath: /var/parca
          name: parca-config
      nodeSelector:
        kubernetes.io/os: linux
      securityContext:
        fsGroup: 65534
        runAsUser: 65534
      serviceAccountName: parca
      terminationGracePeriodSeconds: 120
      volumes:
      - configMap:
          name: parca-config
        name: parca-config
