apps/parca/manifests/parca/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-signin: https://auth.ankhmorpork.thaum.xyz/oauth2/start?rd=$scheme://$host$escaped_request_uri
    nginx.ingress.kubernetes.io/auth-url: https://auth.ankhmorpork.thaum.xyz/oauth2/auth
  labels:
    app.kubernetes.io/component: observability
    app.kubernetes.io/instance: parca
    app.kubernetes.io/name: parca
    app.kubernetes.io/version: 0.1.1
  name: parca
  namespace: parca
spec:
  rules:
  - host: parca.ankhmorpork.thaum.xyz
    http:
      paths:
      - backend:
          service:
            name: parca
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - parca.ankhmorpork.thaum.xyz
    secretName: parca-ingress-tls
